# KompasPlugin

./: CMakeLists.txt  README.md  build-msvc.bat
cmake/: FindKompas3D.cmake
src/: CMakeLists.txt
src/KompasPlugin/: CMakeLists.txt  KompasPlugin.cpp  KompasPlugin.def  stdafx.h
src/Utility/: CMakeLists.txt  Utility.cpp
src/Utility/include/: Utility.h
